Update 'j8cxq6dss-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-226bec369d.zvgt.p3.openshiftapps.com/rhtap/rhtap-qe:e3165a55184056838dfdc0b83e877707d730e1a6@sha256:f01164935fb27a33df39f65af42c892694bd9c7879b9205e04d4de9b9753d05d

--- a/components/j8cxq6dss-python/overlays/development/deployment-patch.yaml
+++ b/components/j8cxq6dss-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j8cxq6dss-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-226bec369d.zvgt.p3.openshiftapps.com/rhtap/rhtap-qe:e3165a55184056838dfdc0b83e877707d730e1a6@sha256:f01164935fb27a33df39f65af42c892694bd9c7879b9205e04d4de9b9753d05d
+          name: container-image
